--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
  h1{
+
   font-family: verdana;
   color:blue;
 }
 
  h2{
   font-family: verdana;
-  color:red;
+  color:blue;
 }
 
 p{
  font-family: verdana;
 }
+
 
 body {
     background-color:#00997a;
